# m2_hw7

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 24889233b777_init.py
db/: models.py  my_select.py  seed.py
